@@ -22,13 +22,12 @@ enum StairType
     STAIR_DOWN
 };
 
-typedef struct DungeonCell
+typedef struct CellTerrain
 {
     uint8_t type : 4;
     uint8_t is_stair : 2;
-    uint8_t hardness : 8;
 }
-DungeonCell;
+CellTerrain;
 
 typedef struct DungeonRoom
 {
@@ -55,13 +54,14 @@ void print_room(const DungeonRoom* r);
 
 typedef struct Dungeon
 {
-    DungeonCell cells[DUNGEON_Y_DIM][DUNGEON_X_DIM];
+    CellTerrain terrain[DUNGEON_Y_DIM][DUNGEON_X_DIM];
+    uint8_t hardness[DUNGEON_Y_DIM][DUNGEON_X_DIM];
+
     DungeonRoom* rooms;
+
     uint16_t num_rooms;
     uint16_t num_up_stair;
     uint16_t num_down_stair;
-
-    // char printable[DUNGEON_Y_DIM][DUNGEON_X_DIM];
 }
 Dungeon;
 
@@ -69,7 +69,7 @@ int generate_dungeon(Dungeon* d, uint32_t seed);
 int zero_dungeon(Dungeon* d);
 int destruct_dungeon(Dungeon* d);
 
-int random_dungeon_floor_pos(uint8_t* pos);
+int random_dungeon_floor_pos(Dungeon* d, uint8_t* pos);
 
 int print_dungeon(Dungeon* d, uint8_t* pc_loc, int border);
 int serialize_dungeon(const Dungeon* d, FILE* out, const uint8_t* pc_loc);
