@@ -28,8 +28,8 @@
 #endif
 
 #ifndef DUNGEON_PERLIN_SCALE_X
-#define DUNGEON_PERLIN_SCALE_X 0.05f
+#define DUNGEON_PERLIN_SCALE_X 0.15f
 #endif
 #ifndef DUNGEON_PERLIN_SCALE_Y
-#define DUNGEON_PERLIN_SCALE_Y 0.1f
+#define DUNGEON_PERLIN_SCALE_Y 0.3f
 #endif
